public/css/style.css
/* ... */
.heading_container h2 {
    text-transform: uppercase;
    font-weight: bold;
}

.heading_container h2 span {
    color: #808f5b;
}

.heading_container.heading_center {
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    text-align: center;
}

/*header section*/
.hero_area {
    padding: 0 45px;
}

.hero_area.sub_pages {
    height: auto;
}

#navbarSupportedContent {
    width: 100%;
    background-color: white;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
    padding: 10px 0;
    border-radius: 15px 15px 0 0;
}

#navbarSupportedContent.innerpage_navbar {
    background-color: white;
    border-radius: 10px;
    -webkit-box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.25);
    box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.25);
}

#navbarSupportedContent.innerpage_navbar .nav-item.active .nav-link {
    background-color: #f4f5f6;
}

#navbarSupportedContent .navbar-nav .nav-link {
    padding: 5px 25px;
    color: black;
    text-align: center;
    text-transform: uppercase;
    border-radius: 5px;
}

#navbarSupportedContent .nav-item.active .nav-link {
    background-color: #ffffff;
}

.nav-item.dropdown {
    position: relative;
}

.dropdown-menu {
    display: none;
    position: absolute;
    top: 100%;
    left: 0%;
    background-color: white;
    border-radius: 5px;
    padding: 0%;
    list-style: none;
    min-width: 160px;
    z-index: 1;
}

.dropdown-menu .dropdown-item {
    padding: 10px 20px;
    text-align: left;
    color: gray;
    text-transform: none;
    text-decoration: none;
    display: block;
    border-radius: 5px;
}

.dropdown-menu .dropdown-item.hover {
    background-color: gray;
}

.nav-item.dropdown:hover .dropdown-menu {
    display: block;
}

a,
a:hover,
a:focus {
    text-decoration: none;
}

a:hover,
a:focus {
    color: initial;
}

.btn,
.btn:focus {
    outline: none !important;
    -webkit-box-shadow: none;
    box-shadow: none;
}

.navbar-brand {
    margin: 15px 0;
    padding: 0;
}

.navbar-brand span {
    font-size: 28px;
    font-weight: bold;
    color: #000000;
    text-transform: uppercase;
    margin: 0;
    padding: 0;
}

.custom_nav-container .nav_search-btn {
    padding: 0;
    border: none;
}

.custom_nav-container {
    z-index: 99999;
    padding: 0;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
}

.custom_nav-container .navbar-toggler {
    outline: none;
}

.custom_nav-container .navbar-toggler {
    outline: none;
}

.custom_nav-container .navbar-toggler {
    padding: 0;
    width: 37px;
    height: 42px;
    -webkit-transition: all .3s;
    transition: all .3s;
}

.custom_nav-container .navbar-toggler span {
    display: block;
    width: 35px;
    height: 4px;
    background-color: #000000;
    margin: 7px 0;
    -webkit-transition: all 0.3s;
    transition: all 0.3s;
    position: relative;
    border-radius: 5px;
    -webkit-transition: all .3s;
    transition: all .3s;
}

.custom_nav-container .navbar-toggler span::before, .custom_nav-container .navbar-toggler span::after {
    content: "";
    position: absolute;
    left: 0;
    height: 100%;
    width: 100%;
    background-color: #000000;
    top: -10px;
    border-radius: 5px;
    -webkit-transition: all .3s;
    transition: all .3s;
}

.custom_nav-container .navbar-toggler span::after {
    top: 10px;
}

.custom_nav-container .navbar-toggler[aria-expanded="true"] {
    -webkit-transform: rotate(360deg);
    transform: rotate(360deg);
}

.custom_nav-container .navbar-toggler[aria-expanded="true"] span {
    -webkit-transform: rotate(45deg);
    transform: rotate(45deg);
}

.custom_nav-container .navbar-toggler[aria-expanded="true"] span::before, .custom_nav-container .navbar-toggler[aria-expanded="true"] span::after {
    -webkit-transform: rotate(90deg);
    transform: rotate(90deg);
    top: 0;
}

.user_option {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-left: 25px;
}

.user_option a {
    margin-right: 25px;
    color: #000000;
}

.filter-btn {
    display: inline-block;
    padding: 10px 20px;
    border-radius: 5px;
    background-color: #333;
    color: #fff;
    text-decoration: none;
    transition: background-color 0.2s ease;
}

.filter-btn:hover {
    background-color: #444;
}

.user_option a span {
    margin-left: 5px;
}

.rating {
    font-size: 20px;
    color: gold;
}

/*end header section*/
.slider_section {
    padding-top: 0px;
}

.slider_section .slider_container {
    color: #fefefe;
    padding: 0 25px 25px 25px;
    border-radius: 0 0 15px 15px;
}

.slider_section .row {
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
}

.slider_section .img-box {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
    padding: 45px;
}

.slider_section .img-box img {
    width: 275px;
}

.slider_section .detail-box {
    padding-left: 45px;
}

.slider_section .detail-box h1 {
    font-weight: bold;
    font-size: 3.5rem;
    margin-bottom: 10px;
}

.slider_section .detail-box a {
    display: inline-block;
    padding: 10px 40px;
    background-color: #426b1f;
    color: #ffffff;
    border: 1px solid #426b1f;
    border-radius: 5px;
    -webkit-transition: all .3s;
    transition: all .3s;
    margin-top: 25px;
    text-transform: uppercase;
}

.slider_section .detail-box a:hover {
    background-color: transparent;
    color: #426b1f;
}
/* ... */

